# src/api/controllers/index.js
@@ -1,19 +1,7 @@
-import app from './App';
-import deposit from './deposit';
-import user from './user';
-import admin from './admin';
-import game from './game';
-import ecosystem from './ecosystem';
 import ping from './ping';
-import hello from "./hello";
+import pandaScore from "./pandaScore";
 
 export {
-    hello,
-    app,
-    deposit,
-    user,
-    ecosystem,
-    admin,
-    game,
+    pandaScore,
     ping
 }
